--- a/manager/src/main/AndroidManifest.xml
+++ b/manager/src/main/AndroidManifest.xml
@@ -25,7 +25,7 @@
         android:protectionLevel="dangerous" />
 
     <application
-        android:name=".ShizukuManagerApplication"
+        android:name=".ShizukuApplication"
         android:allowBackup="false"
         android:directBootAware="true"
         android:extractNativeLibs="true"
