--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -110,13 +110,12 @@ dependencies {
     implementation project(':shared')
 
     implementation 'androidx.browser:browser:1.2.0'
-    implementation "androidx.core:core:1.2.0"
+    implementation "androidx.core:core:1.3.0"
     implementation "androidx.fragment:fragment-ktx:1.2.4"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.0.0"
     implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
     implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
-
     implementation 'com.github.topjohnwu.libsu:core:2.5.1'
 
     def preferenceLibraryVersion = '4.2.0-alpha02'
@@ -132,6 +131,8 @@ dependencies {
     implementation 'moe.shizuku.fontprovider:api:10'
 
     implementation 'me.weishu:free_reflection:2.2.0' // bypass hidden api restriction
+
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.65'
 }
 
 apply from: rootProject.file('signing.gradle')
