bypass hidden api on API 30
search JNINativeMethod struct of setHiddenApiExemptions

--- a/manager/src/main/jni/CMakeLists.txt
+++ b/manager/src/main/jni/CMakeLists.txt
@@ -25,3 +25,8 @@ add_library(adb SHARED
         adb_pairing.cpp)
 
 target_link_libraries(adb ${log-lib})
+
+add_library(bypass SHARED
+        bypass.cpp misc.cpp pmparser.c)
+
+target_link_libraries(bypass ${log-lib})
