--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -110,12 +110,12 @@ dependencies {
     implementation project(':shared')
 
     implementation 'androidx.browser:browser:1.2.0'
-    implementation "androidx.core:core:1.3.0"
-    implementation "androidx.fragment:fragment-ktx:1.2.4"
+    implementation "androidx.core:core-ktx:1.3.0"
+    implementation "androidx.fragment:fragment-ktx:1.2.5"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
     implementation "androidx.localbroadcastmanager:localbroadcastmanager:1.0.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
 
     implementation 'com.github.topjohnwu.libsu:core:2.5.1'
 
