--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion rootProject.ext.targetSdkVersion
+    ndkVersion rootProject.ext.ndkVersion
     defaultConfig {
         applicationId "moe.shizuku.sample"
         minSdkVersion rootProject.ext.minSdkVersion
