reduce so size by not using std::vertor & new/delete

--- a/manager/src/main/jni/CMakeLists.txt
+++ b/manager/src/main/jni/CMakeLists.txt
@@ -22,11 +22,6 @@ add_library(helper SHARED
 target_link_libraries(helper ${log-lib})
 
 add_library(adb SHARED
-        adb_pairing.cpp)
+        adb_pairing.cpp bypass.cpp misc.cpp pmparser.c)
 
 target_link_libraries(adb ${log-lib})
-
-add_library(bypass SHARED
-        bypass.cpp misc.cpp pmparser.c)
-
-target_link_libraries(bypass ${log-lib})
