allow run codes from user apps (part 1)

--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,6 +1,6 @@
-#Tue Jun 23 12:17:20 CST 2020
+#Mon Jul 27 11:02:54 CST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-rc-1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-6.5-all.zip
