--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,6 @@
 include ':shared'
 include ':api'
 include ':hidden-api-common', ':hidden-api-common-bridge', ':hidden-api-21', ':hidden-api-21-bridge', ':hidden-api-26', ':hidden-api-26-bridge'
-include ':server'
+include ':server', ':starter'
 include ':manager'
 include ':sample'
