--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -11,7 +11,7 @@ android {
         versionCode rootProject.ext.versionCode
         versionName rootProject.ext.versionName
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-        resConfigs "en", "uk", "zh-rCN", "zh-rTW"
+        resConfigs 'en', 'ar', 'de', 'es-rCL', 'ja', 'pt-rBR', 'ru', 'tr', 'uk', 'zh-rCN', 'zh-rTW'
         resValue "string", "versionName", "${rootProject.ext.versionName}"
         externalNativeBuild {
             cmake {
