use rikka.ndk.thirdparty:boringssl

--- a/build.gradle
+++ b/build.gradle
@@ -19,8 +19,10 @@ buildscript {
         classpath 'com.github.dcendents:android-maven-gradle-plugin:2.1'
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.8.4'
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
+        // for org.bouncycastle:bcprov-jdk15on (https://issuetracker.google.com/issues/159151549)
+        classpath 'org.ow2.asm:asm:8.0.1'
+        classpath 'org.ow2.asm:asm-util:8.0.1'
+        classpath 'org.ow2.asm:asm-commons:8.0.1'
     }
 }
 
