--- a/manager/src/main/jni/CMakeLists.txt
+++ b/manager/src/main/jni/CMakeLists.txt
@@ -1,15 +1,29 @@
 cmake_minimum_required(VERSION 3.4.1)
 
-set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} -Wl,--hash-style=both,-exclude-libs,ALL")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -fvisibility=hidden -fvisibility-inlines-hidden")
+set(LINKER_FLAGS "-Wl,--hash-style=both")
+set(C_FLAGS "-Werror=format")
 
-set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../../../build/starter/${ANDROID_ABI})
+if (CMAKE_BUILD_TYPE STREQUAL "Release")
+    message("Builing Release...")
 
-if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    set(LINKER_FLAGS "${LINKER_FLAGS} -Wl,-exclude-libs,ALL -Wl,--gc-sections")
+    set(C_FLAGS "${C_FLAGS} -O2 -fvisibility=hidden -fvisibility-inlines-hidden")
+elseif (CMAKE_BUILD_TYPE STREQUAL "Debug")
+    message("Builing Debug...")
+
     add_definitions(-DDEBUG)
 endif ()
 
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${C_FLAGS}")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${C_FLAGS}")
+
+set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} ${LINKER_FLAGS}")
+set(CMAKE_MODULE_LINKER_FLAGS "${CMAKE_MODULE_LINKER_FLAGS} ${LINKER_FLAGS}")
+
+set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/../../../build/starter/${ANDROID_ABI})
+
 find_library(log-lib log)
+find_package(boringssl REQUIRED CONFIG)
 
 add_executable(libshizuku.so
         starter.cpp misc.cpp selinux.cpp cgroup.cpp)
@@ -24,4 +38,4 @@ target_link_libraries(libshizuku.so ${log-lib})
 add_library(adb SHARED
         adb_pairing.cpp bypass.cpp misc.cpp pmparser.c)
 
-target_link_libraries(adb ${log-lib})
+target_link_libraries(adb ${log-lib} boringssl::crypto)
