--- a/server/build.gradle
+++ b/server/build.gradle
@@ -72,4 +72,7 @@ dependencies {
     implementation project(':hidden-api-common-bridge')
     implementation project(':hidden-api-21-bridge')
     implementation project(':hidden-api-26-bridge')
+
+    implementation "androidx.annotation:annotation:1.1.0"
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
