--- a/sample/src/main/AndroidManifest.xml
+++ b/sample/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:label="Shizuku Sample"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@android:style/Theme.DeviceDefault.Light"
+        android:theme="@android:style/Theme.DeviceDefault"
         android:extractNativeLibs="true"
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".AnotherProcessActivity">
