Move API & sample to https://github.com/RikkaApps/Shizuku-API

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule "gradle-maven-plugin"]
 	path = gradle-maven-plugin
 	url = https://github.com/sky-uk/gradle-maven-plugin/
+[submodule "api"]
+	path = api
+	url = git@github.com:RikkaApps/Shizuku-API.git
+	branch = master
