--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -101,17 +101,17 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.13'
+    testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.9"
-    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.9"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.2"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.4.2"
 
     //compileOnly project(':hidden-api-common')
     implementation project(':hidden-api-common-bridge')
     implementation project(':api')
-    implementation project(':shared')
+    implementation project(':provider')
 
     implementation 'androidx.browser:browser:1.3.0'
     implementation "androidx.core:core-ktx:1.3.2"
@@ -137,7 +137,7 @@ dependencies {
 
     implementation 'me.weishu:free_reflection:2.2.0' // bypass hidden api restriction
 
-    implementation 'org.bouncycastle:bcpkix-jdk15on:1.66'
+    implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
 
     implementation 'me.zhanghai.android.appiconloader:appiconloader:1.2.0'
 }
