--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -1,9 +1,12 @@
+import java.nio.file.Paths
+
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 
 android {
     compileSdkVersion rootProject.ext.targetSdkVersion
     ndkVersion rootProject.ext.ndkVersion
+    buildToolsVersion rootProject.ext.buildToolsVersion
     defaultConfig {
         applicationId "moe.shizuku.privileged.api"
         minSdkVersion rootProject.ext.minSdkVersion
@@ -59,6 +62,28 @@ android {
     }
     dependenciesInfo {
         includeInApk false
+    }
+}
+
+def optimizeReleaseResources = task('optimizeReleaseResources').doLast {
+    def aapt2 = Paths.get(project.android.sdkDirectory.path, 'build-tools', project.android.buildToolsVersion, 'aapt2')
+    def zip = Paths.get(project.buildDir.path, 'intermediates',
+            'processed_res', 'release', 'out', "resources-release.ap_")
+    def optimized = new File("${zip}.opt")
+    def cmd = exec {
+        commandLine aapt2, 'optimize', '--collapse-resource-names',
+                '--shorten-resource-paths', '-o', optimized, zip
+        ignoreExitValue false
+    }
+    if (cmd.exitValue == 0) {
+        delete(zip)
+        optimized.renameTo("$zip")
+    }
+}
+
+tasks.whenTaskAdded { task ->
+    if (task.name == 'processReleaseResources') {
+        task.finalizedBy optimizeReleaseResources
     }
 }
 
