--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -120,10 +120,23 @@ configurations.all {
 }
 
 repositories {
-    maven { url 'https://jitpack.io' }
-    maven { url 'https://dl.bintray.com/rikkaw/MaterialPreference' }
-    maven { url 'https://dl.bintray.com/rikkaw/Libraries' }
-    maven { url 'https://dl.bintray.com/rikkaw/Shizuku' }
+    maven {
+        url 'https://jitpack.io'
+        content {
+            includeGroup('com.github.topjohnwu.libsu')
+        }
+    }
+    maven { url 'https://dl.bintray.com/rikkaw/MaterialPreference'
+        content {
+            includeGroup('moe.shizuku.preference')
+        }
+    }
+    maven {
+        url 'https://dl.bintray.com/rikkaw/Libraries'
+        content {
+            includeGroupByRegex('rikka.*')
+        }
+    }
 }
 
 dependencies {
@@ -142,22 +155,23 @@ dependencies {
 
     implementation 'androidx.browser:browser:1.3.0'
     implementation "androidx.core:core-ktx:1.3.2"
-    implementation "androidx.fragment:fragment-ktx:1.2.5"
+    implementation "androidx.fragment:fragment-ktx:1.3.0"
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.2.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.2.0"
+    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
 
-    implementation 'com.github.topjohnwu.libsu:core:3.0.2'
+    implementation 'com.github.topjohnwu.libsu:core:3.1.1'
 
     def preferenceLibraryVersion = '4.2.0-alpha03'
     implementation "moe.shizuku.preference:preference-appcompat:$preferenceLibraryVersion"
     implementation "moe.shizuku.preference:preference-simplemenu-appcompat:$preferenceLibraryVersion"
 
-    implementation "rikka.appcompat:appcompat:1.2.0-rc01"
-    implementation "rikka.core:core:1.3.0"
-    implementation "rikka.material:material:1.5.0"
-    implementation "rikka.html:html:1.1.1"
-    implementation "rikka.recyclerview:recyclerview-utils:1.2.0"
+    implementation 'rikka.appcompat:appcompat:1.2.0-rc01'
+    implementation 'rikka.core:core:1.3.0'
+    implementation 'rikka.material:material:1.6.0'
+    implementation 'rikka.html:html-ktx:1.1.2'
+    implementation 'rikka.recyclerview:recyclerview-utils:1.2.0'
+    implementation 'rikka.widget:borderview:1.0.0'
     implementation 'rikka.ndk.thirdparty:boringssl:20200911'
 
     implementation 'moe.shizuku.fontprovider:api:10'
@@ -166,7 +180,7 @@ dependencies {
 
     implementation 'org.bouncycastle:bcpkix-jdk15on:1.68'
 
-    implementation 'me.zhanghai.android.appiconloader:appiconloader:1.2.0'
+    implementation 'me.zhanghai.android.appiconloader:appiconloader:1.3.0'
 }
 
 apply from: rootProject.file('signing.gradle')
