Combine server's dex with app's dex
Also move script for adb back to /sdcard because
adb has no permission to access /data/user starting from Android 12 (blocked by SELinux)

--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -150,6 +150,8 @@ dependencies {
 
     //compileOnly project(':hidden-api-common')
     implementation project(':hidden-api-common-bridge')
+    implementation project(':server')
+    implementation project(':starter')
     implementation project(':api')
     implementation project(':provider')
 
