--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,11 @@ idea.module {
 buildscript {
     apply from: 'api/manifest.gradle'
 
-    ext.kotlinVersion = '1.4.30'
+    ext.kotlinVersion = '1.4.31'
     repositories {
-        jcenter()
+        mavenCentral()
         google()
+        jcenter()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
@@ -22,8 +23,9 @@ buildscript {
 
 allprojects {
     repositories {
-        jcenter()
+        mavenCentral()
         google()
+        jcenter()
     }
     tasks.withType(Javadoc) {
         failOnError false
