--- a/manager/build.gradle
+++ b/manager/build.gradle
@@ -141,7 +141,7 @@ repositories {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    testImplementation 'junit:junit:4.13.1'
+    testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test:runner:1.3.0'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlinVersion"
@@ -156,24 +156,23 @@ dependencies {
     implementation project(':provider')
 
     implementation 'androidx.browser:browser:1.3.0'
-    implementation "androidx.core:core-ktx:1.3.2"
-    implementation "androidx.fragment:fragment-ktx:1.3.0"
-    implementation "androidx.recyclerview:recyclerview:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0"
-    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
+    implementation 'androidx.core:core-ktx:1.3.2'
+    implementation 'androidx.fragment:fragment-ktx:1.3.0'
+    implementation 'androidx.recyclerview:recyclerview:1.1.0'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.3.0'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.3.0'
+    implementation 'androidx.preference:preference-ktx:1.1.1'
 
     implementation 'com.github.topjohnwu.libsu:core:3.1.1'
 
-    def preferenceLibraryVersion = '4.2.0-alpha03'
-    implementation "moe.shizuku.preference:preference-appcompat:$preferenceLibraryVersion"
-    implementation "moe.shizuku.preference:preference-simplemenu-appcompat:$preferenceLibraryVersion"
-
-    implementation 'rikka.appcompat:appcompat:1.2.0-rc01'
-    implementation 'rikka.core:core:1.3.0'
-    implementation 'rikka.material:material:1.6.0'
-    implementation 'rikka.html:html-ktx:1.1.2'
-    implementation 'rikka.recyclerview:recyclerview-utils:1.2.0'
-    implementation 'rikka.widget:borderview:1.0.0'
+    implementation 'dev.rikka.rikkax.appcompat:appcompat:1.2.0-rc01'
+    implementation 'dev.rikka.rikkax.core:core:1.3.0'
+    implementation 'dev.rikka.rikkax.material:material:1.6.0'
+    implementation 'dev.rikka.rikkax.html:html-ktx:1.1.2'
+    implementation 'dev.rikka.rikkax.recyclerview:recyclerview-adapter:1.2.0'
+    implementation 'dev.rikka.rikkax.recyclerview:recyclerview-ktx:1.2.0'
+    implementation 'dev.rikka.rikkax.widget:borderview:1.0.1'
+    implementation 'dev.rikka.rikkax.preference:simplemenu-preference:1.0.1'
     implementation 'rikka.ndk.thirdparty:boringssl:20200911'
 
     implementation 'moe.shizuku.fontprovider:api:10'
